Fixed font sizing issue on IE and button height

--- a/src/sass/myservice-pages-home.scss
+++ b/src/sass/myservice-pages-home.scss
@@ -88,6 +88,9 @@ padding-top:8em!important;
 .story__section .story__three-column {
   padding:0 0 0 0;
 }
+.story__three-column .story__heading--left {
+  font-size: 1.4em;
+}
 
 .story__heading {
   font-size: 1.8em;
@@ -217,6 +220,10 @@ ul.story-points {
     padding:0 0.5em 0 0.5em;
   }
 
+  .story__three-column .story__heading--left {
+    font-size: 1.1em;
+  }
+
   .story__heading--left {
     font-size: 1.2em;
     margin-bottom: 0.3em;
@@ -260,6 +267,10 @@ ul.story-points {
 
   .story__heading {
     font-size: 1.6em;
+  }
+
+  .story__three-column .story__heading--left {
+    font-size: 1.3em;
   }
 
   .story__heading--left {
